adds an injectable service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1>Undux Angular Test</h1>
-<ul>
-  <li>
-    <app-button [store]="store"></app-button>
-  </li>
-  <li>
-    <button (click)="changeTheButtonText()">change the button text</button>
-    <input type="text" [(ngModel)]="inputText" #ctrl="ngModel" required>
-  </li>
-</ul>
+<div>
+  <button (click)="changeTheButtonText()">change the button text</button>
+  <input type="text" [(ngModel)]="inputText" #ctrl="ngModel" required>
+</div>
 
-<h2>Click Counter</h2>
+<h2>Using Property Binding</h2>
+<app-button [store]="store"></app-button>
 <app-display [store]="store"></app-display>
 
+
+<h2>Using Injectable Service</h2>
+<app-button-using-service></app-button-using-service>
+<app-display-using-service></app-display-using-service>
